ajusta height do conteiner

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             </h1>
             <input type="text" class="conteudo__conteiner-input" placeholder="Nova tarefa" id="inputTarefa">
             <button class="conteudo__conteiner-call-to-action" id="btnAdicionaTarefa">Add</button>
+            <div class="botoes" id="botoesLimpaApaga">
+                <p class="btn-apaga-tudo">Tudo feito</p>
+                <p class="btn-marca-tudo-como-feito">Apaga tudo</p>
+            </div>
         </form>
     </main>
 </body>
