--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <input type="text" class="conteudo__conteiner-input" placeholder="Nova tarefa" id="inputTarefa">
             <button class="conteudo__conteiner-call-to-action" id="btnAdicionaTarefa">Add</button>
             <div class="botoes" id="botoesLimpaApaga">
-                <p class="btn-apaga-tudo">Tudo feito</p>
-                <p class="btn-marca-tudo-como-feito">Apaga tudo</p>
+                <p class="btn-marca-tudo-como-feito" id="btnFeito">Tudo feito</p>
+                <p class="btn-apaga-tudo" id="btnApaga">Apaga tudo</p>
             </div>
         </form>
     </main>
