--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">   
     <script defer src="js/script.js"></script>
-    <title>Todo list </title>
+    <title>Adicione uma tarefa </title>
 </head>
 <body>
     <main class="conteudo">
@@ -21,6 +21,7 @@
                 <p class="btn-marca-tudo-como-feito" id="btnFeito">Tudo feito</p>
                 <p class="btn-apaga-tudo" id="btnApaga">Apaga tudo</p>
             </div>
+            <div id="drag"></div>
         </form>
     </main>
 </body>
